# rke2-installer

./: .coverage  .gitignore  CODE_FIXES_SUMMARY.md  README.md  config-update.yml  config.yml  main-update.py.bak  main-update2.py  main.py  makefile  pyproject.toml  pytest.ini  pyvenv.cfg  requirements-ci.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
deploy/: __init__.py  config.py  config_generator.py  health.py  node.py  systemd.py  utils.py  utils.py.bak
deploy/airgap/: __init__.py  bundle_manager.py
deploy/distributions/: __init__.py  airgapped_rke2_handler.py  base_handler.py  eks_anywhere_handler.py  rke2_handler.py
deploy/os_handlers/: __init__.py  airgapped_rhel_handler.py  airgapped_ubuntu_handler.py  base_handler.py  rhel_handler.py  ubuntu_handler.py
deploy/validation/: airgap_validator.py
logo/: space_jam_logo.py
test-results/: unit-tests.xml
tests/: conftest.py  quick_tests.py  run_simple_tests.py
tests/e2e/: test_deployment_workflow.py  test_error_scenarios.py  test_performance.py
tests/scenarios/: test_real_world_scenarios.py  test_security_scenarios.py
tests/unit/: test_config_validation.py  test_config_validation_fixed.py  test_handlers.py.bak  test_handlers_fixed.py  test_utils.py
tests/utils/: assertions.py  docker_helpers.py  mock_helpers.py  performance_helpers.py  test_fixtures.py
uninstall/: uninstall_cluster.py  uninstall_rke2.py
